--- a/tests/samples/with_secrets.yml
+++ b/tests/samples/with_secrets.yml
@@ -35,7 +35,6 @@ mounts:
   ephemeral_mounts:
     - name: runtime-run
       path: /run/secure
-      apply_to: [docker, podman, kubernetes, proxmox, baremetal]
       medium: Memory
       size: 96Mi
 health:
@@ -46,11 +45,12 @@ health:
 needs_container_runtime: true
 secrets:
   shred_after_apply: true
-  env:
+  items:
     - name: SECURE_TOKEN
+      type: env
       value: super-secure-token
-  files:
     - name: tls-key
-      value: secret-tls-key
+      type: file
+      content: secret-tls-key
       target: /etc/ssl/private/tls.key
       mode: '0400'
