--- a/roles/common/apply_runtime/tasks/docker.yml
+++ b/roles/common/apply_runtime/tasks/docker.yml
@@ -1,49 +1,16 @@
----
-- name: Resolve Docker secrets
+- name: Prepare Docker secrets
+  include_tasks: prepare_secrets.yml
+  vars:
+    runtime_secret_env_path: null
+    runtime_secret_dir: "{{ runtime_output_dir }}/secrets"
+    runtime_secret_write_env_file: false
+
+- name: Derive Docker secret helpers
   set_fact:
-    compose_secret_env: "{{ secrets.env if secrets is defined and secrets.env is not none and secrets.env | length > 0 else [] }}"
-    compose_secret_env_map: "{{ dict(compose_secret_env | map(attribute='name') | zip(compose_secret_env | map(attribute='value'))) if compose_secret_env | length > 0 else {} }}"
-    compose_secret_files: "{{ secrets.files if secrets is defined and secrets.files is not none and secrets.files | length > 0 else [] }}"
-
-    compose_secret_shred: "{{ secrets.shred_after_apply | default(true) if secrets is defined else true }}"
-
-    compose_secret_env_path: "{{ runtime_output_dir }}/{{ service_name | default(service_id) }}.env"
-
-
-- name: Register Docker secret shredding handler
-  set_fact:
-    runtime_secret_cleanup_contexts: >-
-      {{
-        (runtime_secret_cleanup_contexts | default([]))
-        + [
-          {
-            'env_path': compose_secret_env_path,
-            'env': compose_secret_env,
-            'files': compose_secret_files,
-            'directory': runtime_output_dir + '/secrets',
-            'shred': compose_secret_shred,
-          }
-        ]
-      }}
-  when: compose_secret_env | length > 0 or compose_secret_files | length > 0
-  notify: runtime secret cleanup
-  changed_when: true
-
-- name: Ensure Compose secret directory exists
-  file:
-    path: "{{ runtime_output_dir }}/secrets"
-    state: directory
-    mode: '0700'
-  when: compose_secret_files | length > 0
-
-- name: Write Compose secret files
-  copy:
-    dest: "{{ runtime_output_dir }}/secrets/{{ item.name }}"
-    mode: "{{ item.mode | default('0400') }}"
-    content: "{{ item.value | default(item.content) }}"
-  loop: "{{ compose_secret_files }}"
-  when: compose_secret_files | length > 0
-  no_log: true
+    compose_secret_env: "{{ runtime_secret_context.env }}"
+    compose_secret_env_map: "{{ runtime_secret_context | secrets_env_map }}"
+    compose_secret_files: "{{ runtime_secret_context.files }}"
+    compose_secret_shred: "{{ runtime_secret_context.shred_after_apply }}"
 
 - name: Verify Docker daemon is running
   ansible.builtin.command: docker info
