--- a/roles/system_hardening/defaults/main.yml
+++ b/roles/system_hardening/defaults/main.yml
@@ -22,17 +22,28 @@ hardening_ipv6_disable_targets:
   - net.ipv6.conf.default.disable_ipv6
   - net.ipv6.conf.lo.disable_ipv6
 hardening_sysctl_common:
-  - { name: 'net.ipv4.conf.all.accept_redirects', value: '0' }
-  - { name: 'net.ipv4.conf.all.send_redirects', value: '0' }
-  - { name: 'net.ipv4.conf.all.accept_source_route', value: '0' }
-  - { name: 'net.ipv4.icmp_echo_ignore_broadcasts', value: '1' }
-  - { name: 'net.ipv4.tcp_syncookies', value: '1' }
-  - { name: 'net.ipv4.conf.all.rp_filter', value: '1' }
-  - { name: 'net.ipv4.conf.default.rp_filter', value: '1' }
-  - { name: 'net.ipv4.conf.all.log_martians', value: '1' }
-  - { name: 'kernel.randomize_va_space', value: '2' }
-  - { name: 'kernel.panic', value: '10' }
-  - { name: 'kernel.yama.ptrace_scope', value: '1' }
+  - name: net.ipv4.conf.all.accept_redirects
+    value: "0"
+  - name: net.ipv4.conf.all.send_redirects
+    value: "0"
+  - name: net.ipv4.conf.all.accept_source_route
+    value: "0"
+  - name: net.ipv4.icmp_echo_ignore_broadcasts
+    value: "1"
+  - name: net.ipv4.tcp_syncookies
+    value: "1"
+  - name: net.ipv4.conf.all.rp_filter
+    value: "1"
+  - name: net.ipv4.conf.default.rp_filter
+    value: "1"
+  - name: net.ipv4.conf.all.log_martians
+    value: "1"
+  - name: kernel.randomize_va_space
+    value: "2"
+  - name: kernel.panic
+    value: "10"
+  - name: kernel.yama.ptrace_scope
+    value: "1"
 hardening_umask_targets:
   - /etc/profile
   - /etc/bash.bashrc
